--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -41,51 +41,33 @@
 
 .dark-theme .eaton-single-feature__item { color: #FFF; }
 
-.feature-block-component { padding: 60px 0; }
+.feature-block-component { margin: 60px 0; }
 
-.feature-block-component--theme-blue .feature-block-component__container { background-color: #005EB8; }
+.feature-block-component__image { text-align: center; }
 
-.feature-block-component__container--height { height: 665px; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+.feature-block-component__image .rendition img { width: 100%; height: auto; }
 
-@media screen and (max-width: 767px) { .feature-block-component__container--height .feature-block-component__copy { padding-left: 30px; padding-right: 30px; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__image .rendition img { width: 330px; height: 400px; } }
 
-.feature-block-component__container--height .feature-block-component__text { padding-left: 120px; padding-right: 40px; }
+@media screen and (min-width: 992px) { .feature-block-component__image .rendition img { width: 665px; height: 665px; } }
 
-@media screen and (max-width: 767px) { .feature-block-component__container--height .feature-block-component__text { padding: 0; } }
+.feature-block-component__description { padding: 30px 0; }
 
-@media screen and (max-width: 767px) { .feature-block-component__container--height { height: 900px; } }
+@media screen and (max-width: 767px) { .feature-block-component__text-container { padding: 60px 30px; } }
 
-.feature-block-component__container--white { height: 500px; }
+@media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__text-container { -webkit-box-flex: 2; -webkit-flex: 2; -ms-flex: 2; flex: 2; } }
 
-@media screen and (max-width: 767px) { .feature-block-component__container--white { height: 900px; } }
+.feature-block-component__text-container--white { color: #FFF; }
 
-.feature-block-component__copy { height: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
+@media screen and (min-width: 768px) { .feature-block-component { width: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+  .feature-block-component__image { display: inline-block; position: relative; -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; }
+  .feature-block-component__text-container { width: calc(100% - 484px); -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; padding-right: 80px; padding-left: 80px; }
+  .feature-block-component__right { margin-left: 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+  .feature-block-component__right .feature-block-component__image { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; }
+  .feature-block-component__right .feature-block-component__text-container { -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; padding-right: 80px; padding-left: 0; } }
 
-.feature-block-component__copy--white-text { color: #FFF; }
-
-@media screen and (min-width: 768px) { .feature-block-component__copy--left { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; } }
-
-.feature-block-component__link { display: block; }
-
-.feature-block-component__text { padding-right: 120px; }
-
-.feature-block-component__description { padding-top: 30px; }
-
-.feature-block-component__image { height: 100%; background-repeat: no-repeat; background-position: center; }
-
-.feature-block-component__image--center { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; }
-
-@media screen and (max-width: 767px) { .feature-block-component__image--center { margin-bottom: 120px; } }
-
-@media screen and (min-width: 768px) { .feature-block-component__image--center { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; } }
-
-.feature-block-component__cta { margin-top: 30px; }
-
-@media screen and (max-width: 767px) { .feature-block-component__container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; margin: 0; }
-  .feature-block-component__text { padding-right: 0; }
-  .feature-block-component__copy { padding-top: 30px; -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; min-height: 380px; } }
-
-@media screen and (min-width: 768px) and (max-width: 991px) { .feature-block-component__container { height: 400px; } }
+@media screen and (min-width: 1200px) { .feature-block-component { width: calc((100% - 1140px) / 2 + 1140px); }
+  .feature-block-component__right { margin-left: calc((100% - 1140px) / 2); } }
 
 .eaton-article-feature { font-family: "Eaton", Arial, sans-serif; }
 
